# cmake_external_project

./: CMakeLists.txt  README.md
contribs/: CMakeLists.txt  boost.cmake  xml-security-c.cmake
contribs/patches/: 01-xml-security-c.patch
src/: CMakeLists.txt  main.cpp
src/libs/: CMakeLists.txt  funcs.cpp  funcs.h
